test/parse/module/bad-memory-init-size.txt
;;; ERROR: 1
(module (memory foo))
(;; STDERR ;;;
out/test/parse/module/bad-memory-init-size.txt:2:17: error: unexpected token "foo", expected a natural number (e.g. 123).
(module (memory foo))
                ^^^
;;; STDERR ;;)
